Update code format and improve logo color transition
Code on various web pages was reformatted for easier readability, this involved adding line breaks and indentation to longer sections. Additionally, the color transition on the '.dev' text part of the website logo was improved. Instead of a blinking effect, colors will now increment in hue gradually, creating a smoother transition. This achieves a more desirable aesthetic for the logo and enhances user experience. Regular intervals were also set for the incrementation.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
 <div class="container shadow">
-    <span id="github" class="flex"><a href="https://github.com/Tsadriu" target="_blank"><i class="fa-brands fa-github"></i> MY GITHUB</a></span>
+    <span id="github" class="flex"><a href="https://github.com/Tsadriu" target="_blank">
+        <i class="fa-brands fa-github"></i> MY GITHUB</a></span>
     <img src="assets/images/logo.png" class="logo shadow" alt="Logo of the website">
     <span class="logo-desc flex">
             <i>Tsadriu</i>
@@ -26,9 +27,13 @@
     </div>
     <div>
         <h2 id="about-me">About me</h2>
-        Hey! I'm Fabio Oliveira, a <span id="age"></span>-year-old programmer who got caught in the coding world back in 2016. Right now, I'm in my fourth and <b>final year</b> of a computer programming apprenticeship.<br/>
-        When coding's not taking up my time, I'm diving into <a href="https://www.bungie.net/7/en/Destiny">Destiny 2</a>, <a href="https://overwatch.blizzard.com/en-us/">Overwatch</a>, or just hanging out with my friends in Discord.<br/>
-        I've had this dream of creating a game since I was a kid, and I'm making it a reality bit by bit (whenever work doesn't completely drain my energy).
+        Hey! I'm Fabio Oliveira, a <span id="age"></span>-year-old programmer who got caught in the coding world back in
+        2016. Right now, I'm in my fourth and <b>final year</b> of a computer programming apprenticeship.<br/>
+        When coding's not taking up my time, I'm diving into <a href="https://www.bungie.net/7/en/Destiny">Destiny 2</a>,
+        <a href="https://overwatch.blizzard.com/en-us/">Overwatch</a>, or just hanging out with my friends in
+        Discord.<br/>
+        I've had this dream of creating a game since I was a kid, and I'm making it a reality bit by bit (whenever work
+        doesn't completely drain my energy).
     </div>
     <br>
     <hr>
@@ -36,10 +41,20 @@
     <div>
         <h2 id="skill">My skills</h2>
         <ul>
-            <li><b><a href="https://manual.yoyogames.com/GameMaker_Language.htm" target="_blank">GML</a></b> in 2016, but barely any knowledge of it is left.</li>
-            <li><b><a href="https://docs.oracle.com/javase/8/docs/technotes/guides/language/index.html" target="_blank">Java</a></b> in 2017 and still using it in school.</li>
-            <li><b><a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a></b> in 2020 and still using it for personal projects.</li>
-            <li><b><a href="https://www.w3schools.com/html/" target="_blank">HTML</a></b>, <b><a href="https://www.w3schools.com/css/" target="_blank">CSS</a></b> and <b><a href="https://www.w3schools.com/js/" target="_blank">JS</a></b> in 2022 and still using it in school and/or personal projects.</li>
+            <li><b><a href="https://manual.yoyogames.com/GameMaker_Language.htm" target="_blank">GML</a></b> in 2016,
+                but barely any knowledge of it is left.
+            </li>
+            <li><b><a href="https://docs.oracle.com/javase/8/docs/technotes/guides/language/index.html" target="_blank">Java</a></b>
+                in 2017 and still using it in school.
+            </li>
+            <li><b><a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a></b> in 2020 and
+                still using it for personal projects.
+            </li>
+            <li><b><a href="https://www.w3schools.com/html/" target="_blank">HTML</a></b>, <b><a
+                    href="https://www.w3schools.com/css/" target="_blank">CSS</a></b> and <b><a
+                    href="https://www.w3schools.com/js/" target="_blank">JS</a></b> in 2022 and still using it in school
+                and/or personal projects.
+            </li>
         </ul>
     </div>
 
@@ -56,38 +71,64 @@
             </div>
             <div class="project-desc">
                 <div class="project-title">NESTRONOMUS</div>
-                <a href="https://gamejolt.com/games/Nestronomus/463568" target="_blank"><img src="assets/images/nestronomus_bg.png" class="project-img"></a>
-                A small 2D turn-based RPG game developed between 2020 and 2021 using <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> and <a href="https://unity.com/" target="_blank">Unity</a>.
+                <a href="https://gamejolt.com/games/Nestronomus/463568" target="_blank"><img
+                        src="assets/images/nestronomus_bg.png" class="project-img"></a>
+                A small 2D turn-based RPG game developed between 2020 and 2021 using <a
+                    href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> and <a
+                    href="https://unity.com/" target="_blank">Unity</a>.
             </div>
             <div class="project-desc">
                 <div class="project-title">FLYFF UNIVERSE LAUNCHER</div>
-                <a href="https://github.com/Tsadriu/FlyffUniverseLauncher" target="_blank"><img src="assets/images/flyff_bg.png" class="project-img"></a>
-                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> <a href="https://learn.microsoft.com/en-us/visualstudio/ide/create-csharp-winform-visual-studio?view=vs-2022" target="_blank">Windows Forms application</a> that can be used to load more instances of the game <a href="https://universe.flyff.com/" target="_blank">Flyff Universe</a>.
+                <a href="https://github.com/Tsadriu/FlyffUniverseLauncher" target="_blank"><img
+                        src="assets/images/flyff_bg.png" class="project-img"></a>
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> <a
+                    href="https://learn.microsoft.com/en-us/visualstudio/ide/create-csharp-winform-visual-studio?view=vs-2022"
+                    target="_blank">Windows Forms application</a> that can be used to load more instances of the game <a
+                    href="https://universe.flyff.com/" target="_blank">Flyff Universe</a>.
             </div>
             <div class="project-desc">
                 <div class="project-title">DIM<br/>MULTI-CLIENT</div>
-                <a href="https://github.com/Tsadriu/DIM_MultiClient" target="_blank"><img src="assets/images/dim_bg.png" class="project-img"></a>
-                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> <a href="https://learn.microsoft.com/en-us/visualstudio/ide/create-csharp-winform-visual-studio?view=vs-2022" target="_blank">Windows Forms application</a> that allows the user to launch more instances of <a href="https://destinyitemmanager.com/en/" target="_blank">DIM</a>.
+                <a href="https://github.com/Tsadriu/DIM_MultiClient" target="_blank"><img src="assets/images/dim_bg.png"
+                                                                                          class="project-img"></a>
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> <a
+                    href="https://learn.microsoft.com/en-us/visualstudio/ide/create-csharp-winform-visual-studio?view=vs-2022"
+                    target="_blank">Windows Forms application</a> that allows the user to launch more instances of <a
+                    href="https://destinyitemmanager.com/en/" target="_blank">DIM</a>.
             </div>
             <div class="project-desc">
                 <div class="project-title">TSADRIU UTILITIES</div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities" target="_blank"><img src="assets/images/setting_bg.png" class="project-img"></a>
-                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that has many utilities to manipulate strings, numbers, dates and more.
+                <a href="https://www.nuget.org/packages/TsadriuUtilities" target="_blank"><img
+                        src="assets/images/setting_bg.png" class="project-img"></a>
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that has
+                many utilities to manipulate strings, numbers, dates and more.
+            </div>
+            <div class="project-desc">
+                <div class="project-title">TSADRIU UTILITIES.STRING</div>
+                <a href="https://www.nuget.org/packages/TsadriuUtilities" target="_blank"><img
+                        src="assets/images/setting_bg.png" class="project-img"></a>
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that helps
+                manipulating and managing string types.
             </div>
             <div class="project-desc">
                 <div class="project-title">TSADRIU UTILITIES.<br/>DATETIME</div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities.DateTime" target="_blank"><img src="assets/images/setting_bg.png" class="project-img"></a>
-                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that helps manipulating and managing DateTime types.
+                <a href="https://www.nuget.org/packages/TsadriuUtilities.DateTime" target="_blank"><img
+                        src="assets/images/setting_bg.png" class="project-img"></a>
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that helps
+                manipulating and managing DateTime types.
             </div>
             <div class="project-desc">
                 <div class="project-title">TSADRIU UTILITIES.EXCEL</div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities.Excel" target="_blank"><img src="assets/images/excel_bg.png" class="project-img"></a>
-                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that helps on reading <b>XLSX</b> files.
+                <a href="https://www.nuget.org/packages/TsadriuUtilities.Excel" target="_blank"><img
+                        src="assets/images/excel_bg.png" class="project-img"></a>
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that helps
+                on reading <b>XLSX</b> files.
             </div>
             <div class="project-desc">
                 <div class="project-title">TSADRIU UTILITIES.CSV</div>
-                <a href="https://www.nuget.org/packages/TsadriuUtilities.Csv" target="_blank"><img src="assets/images/csv_bg.png" class="project-img"></a>
-                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that helps on reading or creating a <b>CSV</b> file.
+                <a href="https://www.nuget.org/packages/TsadriuUtilities.Csv" target="_blank"><img
+                        src="assets/images/csv_bg.png" class="project-img"></a>
+                A <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a> library that helps
+                on reading or creating a <b>CSV</b> file.
             </div>
         </section>
     </div>
@@ -99,10 +140,12 @@
         <h2 id="contacts">Contact me</h2>
         Find me on:
         <ul>
-            <li><i class="fa fa-envelope"></i> Email: <a href="mailto:tsadriu@tsadriu.dev">tsadriu[at]tsadriu[dot]dev</a></li>
-            <li><i class="fa-brands fa-discord"></i> Discord: Tsadriu</li>
-            <li><i class="fa-brands fa-linkedin-in"></i> Linkedin: <a href="https://www.linkedin.com/in/fabio-oliveira-de-sousa-2328a21b5/">Fabio Oliveira</a></li>
-            <li><i class="fa fa-coffee"></i> Ko-fi: <a href="https://ko-fi.com/tsadriu">Donate</a></li>
+            <li><i class="fa fa-envelope"></i> Email: <a
+                    href="mailto:tsadriu@tsadriu.dev">tsadriu[at]tsadriu[dot]dev</a></li>
+            <li><i class="fa-brands fa-discord"></i> Discord: <a href="https://discord.com/users/403650027169513472" target="_blank">Tsadriu</a></li>
+            <li><i class="fa-brands fa-linkedin-in"></i> Linkedin: <a
+                    href="https://www.linkedin.com/in/fabio-oliveira-de-sousa-2328a21b5/" target="_blank">Fabio Oliveira</a></li>
+            <li><i class="fa fa-coffee"></i> Ko-fi: <a href="https://ko-fi.com/tsadriu" target="_blank">Donate</a></li>
         </ul>
     </div>
 
