--- a/pages/arcadia/index.html
+++ b/pages/arcadia/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </section>
-    <a href="../../index.html"><i class="fa fa-arrow-left" aria-hidden="true"> Go back</i></a>
+    <a href="../../index.php"><i class="fa fa-arrow-left" aria-hidden="true"> Go back</i></a>
 </div>
 <script src="../../index.js"></script>
 </body>
